// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiContextMenu is rendered 1`] = `
<div
  aria-label="aria-label"
  class="kuiContextMenu testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`KuiContextMenu props idToPanelMap and initialPanelId renders the referenced panel 1`] = `
<div
  class="kuiContextMenu"
>
  <div
    class="kuiContextMenuPanel"
  >
    <div
      class="kuiPopoverTitle"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        2
      </span>
    </div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`KuiContextMenu props idToPreviousPanelIdMap allows you to click the title button to go back to the previous panel 1`] = `
<div
  class="kuiContextMenu"
  style="height: 0px"
>
  <div
    class="kuiContextMenuPanel"
  >
    <button
      class="kuiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenu__icon kuiIcon fa-angle-left"
        />
        <span
          class="kuiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`KuiContextMenu props idToPreviousPanelIdMap allows you to click the title button to go back to the previous panel 2`] = `
<div
  class="kuiContextMenu"
  style="height: 0px"
>
  <div
    class="kuiContextMenuPanel kuiContextMenuPanel-txOutRight"
  >
    <button
      class="kuiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenu__icon kuiIcon fa-angle-left"
        />
        <span
          class="kuiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      2
    </div>
  </div>
  <div
    class="kuiContextMenuPanel kuiContextMenuPanel-txInRight"
  >
    <button
      class="kuiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenu__icon kuiIcon fa-angle-left"
        />
        <span
          class="kuiContextMenu__text"
        >
          1
        </span>
      </span>
    </button>
    <button
      class="kuiContextMenuItem"
      data-menu-item="true"
      data-test-subj="itemA"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenuItem__text"
        >
          2a
        </span>
        <span
          class="kuiContextMenu__arrow kuiIcon fa-angle-right"
        />
      </span>
    </button>
    <button
      class="kuiContextMenuItem"
      data-menu-item="true"
      data-test-subj="itemB"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenuItem__text"
        >
          2b
        </span>
        <span
          class="kuiContextMenu__arrow kuiIcon fa-angle-right"
        />
      </span>
    </button>
    <button
      class="kuiContextMenuItem"
      data-menu-item="true"
      data-test-subj="itemC"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenuItem__text"
        >
          2c
        </span>
        <span
          class="kuiContextMenu__arrow kuiIcon fa-angle-right"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`KuiContextMenu props isVisible causes the first panel to be shown when it becomes true 1`] = `
<div
  class="kuiContextMenu"
  style="height: 0px"
>
  <div
    class="kuiContextMenuPanel"
  >
    <button
      class="kuiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitleButton"
    >
      <span
        class="kuiContextMenu__itemLayout"
      >
        <span
          class="kuiContextMenu__icon kuiIcon fa-angle-left"
        />
        <span
          class="kuiContextMenu__text"
        >
          2
        </span>
      </span>
    </button>
    <div>
      2
    </div>
  </div>
</div>
`;
